# qfit

./: .gitignore  LICENSE  Learn_QFit_in_10mins copy.ipynb  Learn_QFit_in_10mins.ipynb  MANIFEST.in  QFit_Advanced_Tips.ipynb  QFit_Quick_Start.ipynb  README.md  datapyc.py  debug.ipynb  main.py  meta.yaml  protomon.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
datapyc/: .pylintrc  __init__.py  __main__.py  datapyc_engine.py  datapyc_import.py  datapyc_mainwindow.py  datapyc_save.py  form.ui  main.pyproject  version.py
datapyc.egg-info/: requires.txt
debug/: 1500JJ_Tracking_line.ipynb  debug_paul.ipynb
developer_notes/: notes.txt
docs/: README.md  requirements.txt
example_data/: 00000_twotoneVsPowerTransmission.h5  00004_twotone_CW_.h5  Learn_QFit_in_10_mins.qfit  QFit_Quick_Start.qfit  QFit_Quick_Start_TLS.qfit  Roch_lab_twotone.h5  aug_summary_4_1.hdf5  joint_qubit_twotone.h5  joint_qubit_twotone_ct1.h5  joint_qubit_twotone_ct2.h5  joint_qubit_twotone_ct2_modified.h5  joint_qubit_twotone_unif.h5  spec_scan_Point_12_yokoD_gen.mat  spec_scan_flux_gate_20190629_v05.mat  square_twotone.h5  test.qfit  test_ZTP.qfit  test_save.qfit  toy_twotone.h5  trans_twotone.h5  transition setting error.qfit  trunc_twotone.h5
media_raw_source/: Backup_of_example_GUI_overview.cdr  Backup_of_ruler.cdr  example_GUI_overview.cdr  ruler.cdr
qfit/: .pylintrc  Learn_QFit_in_10mins.ipynb  __init__.py  __main__.py  example_notebook.ipynb  qfit_app.py  qfit_notebook.ipynb  settings.py  user_test.ipynb  version.py
qfit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resources/: auto_translate_ui.sh  rangeslider.qml  (+13 more)
(+208 files in other folders)
